# warden

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
chainload-hello/: Cargo.toml
chainload-hello/src/: main.rs
fixtures/: warden-ab.toml  warden-broken.toml  warden-btrfs.toml  warden-chainload.toml  warden-ext4.toml  warden-linux-a64.toml  warden-linux.toml  warden-rescue-shell.toml  warden-rich.toml  warden-signed.toml  warden-unsigned.toml  warden-wait.toml  warden.toml
refkernel/: Cargo.toml  linker.ld
refkernel/src/: main.rs
test/: build-initramfs.sh
test/initramfs/: init.c
warden/: Cargo.toml
warden-abi/: Cargo.toml
warden-abi/src/: lib.rs
warden-assess/: Cargo.toml
warden-assess/src/: lib.rs
warden-config/: Cargo.toml
warden-config/src/: lib.rs
warden/src/: main.rs
warden/src/arch/: aarch64.rs  mod.rs  x86_64.rs
warden/src/assess/: mod.rs
warden/src/boot/: chainload.rs  elf.rs  linux.rs  mod.rs  warden_rich.rs
warden/src/boot/linux/: initrd.rs
warden/src/console/: input.rs  menu.rs  mod.rs  rescue.rs
warden/src/firmware/: mod.rs
warden/src/fs/: block.rs  btrfs.rs  ext4.rs  mod.rs
warden/src/measure/: mod.rs  tpm2.rs
warden/src/trust/: mod.rs
xtask/: Cargo.toml
xtask/src/: main.rs
