[workspace]
resolver = "2"
members = ["warden", "warden-abi", "warden-config", "xtask", "refkernel"]
# `cargo build --target x86_64-unknown-uefi` at the root builds only these
# no_std/UEFI members; xtask is a host tool (built via `cargo xtask`) and
# refkernel is a bare-metal ELF (built for x86_64-unknown-none via `cargo xtask`).
default-members = ["warden", "warden-abi", "warden-config"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Antonio (architect)"]
repository = "https://example.invalid/warden"
rust-version = "1.96"

# Size-tuned, no-unwind release profile for the firmware binary (GC-04). The
# UEFI targets do not support unwinding, so `panic = "abort"` here is what the
# staged `.efi` is built with. The dev/test profile is left as the default
# (unwind) so `cargo test -p warden-config` can run the parser's host unit tests.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
strip = false
