[package]
name = "chainload-hello"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Tiny UEFI app that prints a marker — target for Warden's explicit chainloading test (P8/T8.2)."

[[bin]]
name = "chainload-hello"
path = "src/main.rs"

[dependencies]
uefi = { version = "0.38.0", default-features = false }
