[package]
name = "refkernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
description = "Tiny higher-half reference kernel that validates the warden-rich handoff (P4/T4.4)."

[[bin]]
name = "refkernel"
path = "src/main.rs"

[dependencies]
warden-abi = { path = "../warden-abi" }
