[package]
name = "warden-abi"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Warden bootloader <-> kernel handoff ABI (WardenBootInfo). #![no_std], no UEFI deps."

[dependencies]
