[package]
name = "warden-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Warden boot config schema + strict no_std TOML-subset parser (host-testable)."

[dependencies]
