[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish = false
description = "Build/run/test helpers for Warden (host tool)."

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
rand_core = "0.6"
